--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-alpha1'
     compile 'com.android.support:design:24.2.0'
     compile 'com.google.android.gms:play-services:9.6.0'
+    compile 'com.google.android.gms:play-services-maps:6.5.87'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
     compile 'com.diogobernardino:williamchart:2.0.1'
 }
