--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="package.name.permission.MAPS_RECEIVE" />
+
 
     <application
         android:allowBackup="true"
@@ -17,6 +19,20 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/gmap_api_key" />
+        <permission
+            android:name="package.name.permission.MAPS_RECEIVE"
+            android:protectionLevel="signature" />
+        <uses-feature
+            android:glEsVersion="0x00020000"
+            android:required="true" />
+        <uses-library android:name="com.google.android.maps" />
 
         <activity android:name=".MainActivity"
             android:label="@string/app_name"
