settings - night mode works, TODO: finish aip downloading

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,11 @@
             android:exported="false" >
         </service>
 
+        <service
+            android:name=".services.AIPDownloader"
+            android:exported="false">
+        </service>
+
     </application>
 
 </manifest>
