--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:6.5.87'
     compile 'com.google.maps.android:android-maps-utils:0.4+'
     compile 'com.diogobernardino:williamchart:2.0.1'
+    compile 'org.jsoup:jsoup:1.9.2'
 }
