--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
         </service>
 
         <service
-            android:name=".services.AIPDownloader"
+            android:name=".services.AIPDownloader.AIPDownloader"
             android:exported="false">
         </service>
 
