--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="package.name.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
 
     <uses-feature android:name="android.hardware.location.gps" />
 
@@ -47,6 +50,11 @@
 
         <service
             android:name=".services.GPSTrackerService"
+            android:label="@string/app_name"
+            android:exported="false" >
+        </service>
+        <service
+            android:name=".services.BTTrackerService"
             android:label="@string/app_name"
             android:exported="false" >
         </service>
